# evalQtAndQml

./: BaseWidget.qml  CMakeLists.txt  Card.qml  Dashboard.qml  LayoutManager.qml  Main.qml  MyChart.qml  MyGraph.qml  MyGraph1.qml  MySlider.qml  MyTheme.qml  TabBar.qml  TestRect.qml  VbusAppWindow.qml  VsliderH.qml  WidgetItem.qml  filehandler.cpp  filehandler.h  main.cpp  vEdit.qml
.github/workflows/: build.yaml  buildMac.yaml  buildWindows.yaml
